- publish revision 1.2.1 - increase jdk requirement to version 20 - make running options more flexible - install option for system paths